# MediaBot

./: .gitignore  CONTRIBUTING.md  LICENSE  MULTI_ACCOUNT_GUIDE.md  README.md  README_AI_COMMENT.md  autox.py  demo_ai_comment.py  env.example  get_cookies.py  main.py  manage_accounts.py  open_batch_profiles.py  pyproject.toml  requirements.txt  run_autox.sh  x.txt
.cursor/rules/: RIPER.mdc
config/: __init__.py  settings.py
config/tasks/: ai_comment_demo.json  ai_engagement.json  basic_engagement.json  conditional_engagement.json  follow_test.json  job_auto_comment.json  light_browsing.json  no_conditions.json  test_gentle_fix.json
docs/: AI_COMMENT_GUIDE.md  AUTOX_USAGE.md  CONDITIONS_GUIDE.md  环境管理指南.md
src/config/: task_config.py
src/core/account/: manager.py
src/core/browser/: manager.py
src/core/twitter/: client.py
src/features/actions/: executor.py
src/features/browse/: timeline.py
src/services/: ai_service.py
src/utils/: logger.py  playwright_stable_selector.py  session_data.py  session_logger.py  storage.py  structural_twitter_selector.py
